@@ -12,6 +12,8 @@ opsi-winst/opsi-script (4.12.3.4) experimental; urgency=low
   * osfunc: StartProcess_cp: now supports WaitForProcessEnding also for [L/M]
   * Winbatch now supports WaitForProcessEnding also for [L/M]
   * new string function which(<command in path>) : string (command with path) [W/L/M]
+  * new stringlist function replaceOpsiConstansts(<list>) : <list>
+  * new string function replaceOpsiConstansts(<string>) : <string>
 
 -- Detlef Oertel <d.oertel@uib.de>  Fri, 27 Dec 2019:15:00:00 +0200
 
